# diagmaker

./: CMakeLists.txt  README.md  compile.bat  imgui.ini  untitled.diag  untitled.diagsv
Assets/: UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: ProjectSettings.asset
include/strolb/: camera.c  imgui.cpp  imgui.h  input.c  input.h  json.cpp  json.h  vector.c  vector.h  vulkan.c  vulkan.h
lib/: freetype.lib
shaders/: frag.spv  text.frag  text_frag.spv  triangle.frag
src/: main.c
